--- a/app/src/main/res/layout/activity_reward_game_view_games.xml
+++ b/app/src/main/res/layout/activity_reward_game_view_games.xml
@@ -16,11 +16,12 @@
 
 
         <TextView
+            android:id="@+id/textViewRewardGameTag"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:gravity="center"
-            android:text="Reward Games"
+            android:text="Available Games"
             android:textAlignment="center"
             android:textSize="18dp"
             android:textStyle="bold"
