--- a/app/src/main/res/layout/fragment_user_home.xml
+++ b/app/src/main/res/layout/fragment_user_home.xml
@@ -29,7 +29,7 @@
                 android:textColor="@color/Red"
                 android:textSize="25dp"
                 android:textStyle="bold"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginBottom="0dp"/>
 
 
@@ -56,7 +56,7 @@
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="10dp"
                 android:background="@color/LightGrey"
                 android:orientation="horizontal">
 
@@ -102,19 +102,19 @@
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="15dp"
                 android:background="@color/LightGrey"
                 android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="20dp"
-                    android:layout_height="100dp"
+                    android:layout_height="110dp"
                     android:background="@color/Green">
 
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
+                    android:layout_height="110dp"
                     android:paddingTop="10dp"
                     android:orientation="vertical">
                     <TextView
@@ -140,17 +140,42 @@
                         android:textSize="14dp"
                         android:textStyle="bold" />
 
+
+                    <LinearLayout
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="0dp"
+                        android:orientation="horizontal">
+
+
                     <Button
                         android:id="@+id/buttonUserHomeFundEwallet"
-                        android:layout_width="180dp"
-                        android:layout_height="30dp"
+                        android:layout_width="0dp"
+                        android:layout_weight=".40"
+                        android:layout_height="40dp"
                         android:background="@drawable/red_button"
                         android:textColor="@color/White"
                         android:layout_marginTop="10dp"
                         android:layout_marginLeft="10dp"
                         android:fontFamily="@font/montserrat"
                         android:layout_alignParentBottom="true"
-                        android:text="Fund My EWallet" />
+                        android:text="Fund your EWallet" />
+
+                        <Button
+                            android:id="@+id/buttonUserHomeEwalletTransactions"
+                            android:layout_width="0dp"
+                            android:layout_weight=".40"
+                            android:layout_height="40dp"
+                            android:background="@drawable/dark_green_button"
+                            android:textColor="@color/White"
+                            android:layout_marginTop="0dp"
+                            android:layout_marginLeft="10dp"
+                            android:fontFamily="@font/montserrat"
+                            android:layout_alignParentBottom="true"
+                            android:text="View your EWallet Transactions" />
+
+
+                    </LinearLayout>
 
                 </LinearLayout>
 
@@ -283,7 +308,7 @@
                     android:layout_marginLeft="5dp"
                     android:layout_weight="80"
                     android:width="0dp"
-                    android:text="Click the ENROL TO PLAY button to see upcoming game and register to play. You will be prompted to pay through your EWallet."
+                    android:text="Click the ENROL TO PLAY button to see upcoming games and register to play. You will be prompted to pay through your EWallet."
                     android:textColor="@color/White"
                     android:textSize="10dp" />
 
@@ -318,7 +343,7 @@
                     android:layout_marginLeft="5dp"
                     android:layout_weight="80"
                     android:width="0dp"
-                    android:text="Click on the PLAY YOUR ENROLLED GAMES to play your already enrolled games."
+                    android:text="Click on the PLAY YOUR ENROLLED GAMES button to play your already enrolled games."
                     android:textColor="@color/White"
                     android:textSize="10dp" />
 
@@ -352,7 +377,7 @@
                     android:layout_marginLeft="5dp"
                     android:layout_weight="80"
                     android:width="0dp"
-                    android:text="Click the VIEW GAME RESULTS to view results of games already played."
+                    android:text="Click the VIEW GAME RESULTS button to view results of games already played."
                     android:textColor="@color/White"
                     android:textSize="10dp" />
 
@@ -390,7 +415,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:fontFamily="@font/montserrat"
                 android:layout_alignParentBottom="true"
                 android:text="Enrol to Play a Game" />
