--- a/app/src/main/res/layout/fragment_user_home.xml
+++ b/app/src/main/res/layout/fragment_user_home.xml
@@ -177,10 +177,26 @@
 
                     </LinearLayout>
 
+
+
+
+
                 </LinearLayout>
 
 
 
+
+                <com.google.android.gms.ads.AdView
+                    xmlns:ads="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/adViewSignUp"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
+                    ads:adSize="BANNER"
+                    ads:adUnitId="ca-app-pub-1422423899855082/3820125354" />
 
 
 
@@ -464,7 +480,19 @@
 
 
 
-ccdd
+            <com.google.android.gms.ads.AdView
+                xmlns:ads="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/adViewUserHome"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentBottom="true"
+                android:layout_gravity="center"
+                android:layout_marginTop="0dp"
+                ads:adSize="BANNER"
+                ads:adUnitId="ca-app-pub-1422423899855082/3820125354" />
+
+
 
             <!--            <com.google.android.gms.ads.AdView-->
             <!--                xmlns:ads="http://schemas.android.com/apk/res-auto"-->
