--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -130,93 +130,89 @@
             </LinearLayout>
 
 
-
-            <LinearLayout
-                android:id="@+id/llayout8"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:layout_below="@+id/layout1"
-                android:orientation="vertical"
-                android:paddingTop="20dp"
-                android:paddingBottom="20dp"
-                android:background="@drawable/playpaddyimage"
-                android:layout_centerHorizontal="true">
-
+                <LinearLayout
+                    android:id="@+id/llayout8"
+                    android:layout_width="match_parent"
+                    android:layout_height="469dp"
+                    android:layout_below="@+id/layout1"
+                    android:layout_centerHorizontal="true"
+                    android:background="@drawable/playpaddyimage"
+                    android:orientation="vertical"
+                    android:paddingTop="20dp"
+                    android:paddingBottom="20dp">
 
 
-<!--            <ImageView-->
-<!--                    android:layout_width="fill_parent"-->
-<!--                    android:layout_height="300dp"-->
-<!--                    android:layout_marginTop="0dp"-->
-<!--                    android:layout_marginBottom="0dp"-->
-<!--                    android:src="@drawable/playpaddyimage" />-->
+                    <!--            <ImageView-->
+                    <!--                    android:layout_width="fill_parent"-->
+                    <!--                    android:layout_height="300dp"-->
+                    <!--                    android:layout_marginTop="0dp"-->
+                    <!--                    android:layout_marginBottom="0dp"-->
+                    <!--                    android:src="@drawable/playpaddyimage" />-->
 
 
+                    <TextView
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="20dp"
+                        android:gravity="center"
+                        android:paddingLeft="20dp"
+                        android:paddingRight="20dp"
+                        android:text="PlayPaddy is fun to play. Why not earn with what you know than play Gambling."
+                        android:textColor="@color/White"
+                        android:textSize="18dp"
+                        android:textStyle="bold"
+                        app:fontFamily="@font/montserrat"
 
-                <TextView
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:text="PlayPaddy is fun to play. Why not earn with what you know than play Gambling."
-                    app:fontFamily="@font/montserrat"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="20dp"
-                    android:paddingRight="20dp"
-                    android:paddingLeft="20dp"
-                    android:textStyle="bold"
-                    android:textSize="18dp"
-                    android:textColor="@color/White"
-                    android:gravity="center"
-
-                    />
-
-
-                <Button
-                    android:id="@+id/buttonSignUp"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/green_button"
-                    android:text="Sign Up"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginBottom="5dp"
-                    android:textColor="@color/White"
-                    android:layout_marginTop="10dp"
-                    android:visibility="visible"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    app:fontFamily="@font/montserrat"/>
+                        />
 
 
-                <TextView
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:gravity="center"
-                    android:text="I already have an Account?"
-                    android:textAlignment="center"
-                    android:textSize="16dp"
-                    android:textColor="@color/Red"
-                    app:fontFamily="@font/montserrat" />
+                    <Button
+                        android:id="@+id/buttonSignUp"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentLeft="true"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="30dp"
+                        android:layout_marginRight="20dp"
+                        android:layout_marginBottom="5dp"
+                        android:background="@drawable/green_button"
+                        android:text="Sign Up"
+                        android:textColor="@color/White"
+                        android:visibility="visible"
+                        app:fontFamily="@font/montserrat" />
 
 
+                    <TextView
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:gravity="center"
+                        android:text="I already have an Account?"
+                        android:textAlignment="center"
+                        android:textColor="@color/Red"
+                        android:textSize="16dp"
+                        app:fontFamily="@font/montserrat" />
 
-                <Button
-                    android:id="@+id/buttonSignIn"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/dark_green_button"
-                    android:text="Sign In"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginBottom="5dp"
-                    android:textColor="@color/White"
-                    android:layout_marginTop="10dp"
-                    android:visibility="visible"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    app:fontFamily="@font/montserrat"/>
 
-            </LinearLayout>
+                    <Button
+                        android:id="@+id/buttonSignIn"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentLeft="true"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginRight="20dp"
+                        android:layout_marginBottom="5dp"
+                        android:background="@drawable/dark_green_button"
+                        android:text="Sign In"
+                        android:textColor="@color/White"
+                        android:visibility="visible"
+                        app:fontFamily="@font/montserrat" />
+
+                </LinearLayout>
 
 
 
